--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     
          <div class="conimage  three" >
            <a href="https://www.linkedin.com/profile/view?id=ADEAAB1JHsgB4zB9MnsqWj04hXpCFberK_lU7Ws&authType=NAME_SEARCH&authToken=cycn&locale=en_US&srchid=4913312721458897416868&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A4913312721458897416868%2CVSRPtargetId%3A491331272%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH" target="_blank">
-            <img src="http://www.limoanywhere.com/images/linkedin.png">
+            <img src="icon/download.png">
            </a>
       </div>
       
