--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
     </div>
 
+<!-- coolcat photo from: http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg -->
 
   </div>
 
