--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     </div>
 
-<!-- coolcat photo from: http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg -->
+<!-- coolcat photo from: images/cool_cat.jpg -->
 
   </div>
 
@@ -74,10 +74,10 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="https://codepen.io/undeaddovahkin/full/aNJrpZ/" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="https://codepen.io/undeaddovahkin/full/aNJrpZ/" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
          
-          <iframe src="https://codepen.io/undeaddovahkin/full/aNJrpZ/" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/knuth.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
 
 
         </div>
@@ -89,7 +89,7 @@
       <div class=" thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
@@ -99,7 +99,7 @@
       <div class=" thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="https://codepen.io/undeaddovahkin/full/oxeOBP/" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="https://codepen.io/undeaddovahkin/full/oxeOBP/" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://codepen.io/undeaddovahkin/full/oxeOBP/" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
@@ -110,7 +110,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
@@ -120,7 +120,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
@@ -130,7 +130,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
@@ -140,7 +140,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
@@ -150,7 +150,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
@@ -160,7 +160,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
@@ -170,7 +170,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="http://img14.deviantart.net/f111/i/2015/224/8/9/cool_cat__pixel_by_tovalhalla-d95ciza.jpg"></a>
+            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
