--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="coverpic">
             <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/weather.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
         <h2 class="text-center introdesu" style="font-size:24px">Local weather</h2>
       </div>
