--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="https://codepen.io/undeaddovahkin/full/aNJrpZ/" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://github.com/MinarAshiqTishan/Knuth_Tribute_Page" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
          
           <iframe src="images/knuth.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
@@ -89,9 +89,9 @@
       <div class=" thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://github.com/MinarAshiqTishan/Plane-Fight" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/2.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1" ></iframe>
         </div>
         <h2 class="text-center introdesu" style="font-size:24px">Space desu</h2>
       </div>
@@ -110,7 +110,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://github.com/MinarAshiqTishan/Weather_App" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="images/weather.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
@@ -120,51 +120,51 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://github.com/MinarAshiqTishan/Ascii_Game" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/game.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
-        <h2 class="text-center introdesu" style="font-size:24px">Wiki viewer</h2>
+        <h2 class="text-center introdesu" style="font-size:24px">ASCII Game</h2>
       </div>
 
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://github.com/MinarAshiqTishan/Camera_Mouse" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/webcam.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
-        <h2 class="text-center introdesu" style="font-size:24px">Twitch</h2>
+        <h2 class="text-center introdesu" style="font-size:24px">Webcam Mouse</h2>
       </div>
 
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://github.com/MinarAshiqTishan/Touchscreen_Stopwatch" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/stopwatch.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
-        <h2 class="text-center introdesu" style="font-size:24px">Calculator</h2>
+        <h2 class="text-center introdesu" style="font-size:24px">Stopwatch</h2>
       </div>
 
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://github.com/MinarAshiqTishan/particlePacking-Prototype" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/pp.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
-        <h2 class="text-center introdesu" style="font-size:24px">Clock</h2>
+        <h2 class="text-center introdesu" style="font-size:24px">Particle Packing Simulation</h2>
       </div>
 
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="#" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://github.com/MinarAshiqTishan/particlePacking-Prototype" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
-        <h2 class="text-center introdesu" style="font-size:24px">Pomodoro</h2>
+        <h2 class="text-center introdesu" style="font-size:24px">asd</h2>
       </div>
 
       <div class="thumbnail-container">
