--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="https://github.com/MinarAshiqTishan/particlePacking-Prototype" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://github.com/MinarAshiqTishan/Portfolio_Website" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/this.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
-        <h2 class="text-center introdesu" style="font-size:24px">asd</h2>
+        <h2 class="text-center introdesu" style="font-size:24px">This Website</h2>
       </div>
 
       <div class="thumbnail-container">
@@ -174,7 +174,7 @@
           </div>
           <iframe src="https://www.wrike.com/blog_images/41907/post_note.png" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
-        <h2 class="text-center introdesu" style="font-size:24px">Tic Tac Toe</h2>
+        <h2 class="text-center introdesu" style="font-size:24px">...</h2>
       </div>
     </div>
   </div>
