--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div id="aboutdesu" class="row">
     <div class="mememe">
       <h1 class="introdesu text-center" style="color:black">About Me</h1>
-      <img class="mepic" src="https://avatars3.githubusercontent.com/u/17936400?v=3&s=460">
+      <img class="mepic" src="images/me.jpg">
 
       <div class="abme text-center">
         <h3>Hi there!</h3> Welcome to my portfolio. I am an Electrical Engineer with a deep passion for programming and learning new things. Here you can view my resume and some of my projects.
@@ -110,7 +110,7 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
-            <a href="https://github.com/MinarAshiqTishan/Weather_App" target="_blank"><img src="images/cool_cat.jpg"></a>
+            <a href="https://codepen.io/undeaddovahkin/pen/EwGLWE" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
           <iframe src="images/weather.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
