--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
             <a href="https://github.com/MinarAshiqTishan/Knuth_Tribute_Page" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
          
-          <iframe src="images/knuth.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/knuth.JPG" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
 
 
         </div>
@@ -91,7 +91,7 @@
           <div class="coverpic">
             <a href="https://github.com/MinarAshiqTishan/Plane-Fight" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="images/2.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1" ></iframe>
+          <iframe src="images/2.JPG" frameborder="0" scrolling="no" onload="this.style.opacity = 1" ></iframe>
         </div>
         <h2 class="text-center introdesu" style="font-size:24px">Space desu</h2>
       </div>
@@ -112,7 +112,7 @@
           <div class="coverpic">
             <a href="https://codepen.io/undeaddovahkin/pen/EwGLWE" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="images/weather.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/weather.JPG" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
         <h2 class="text-center introdesu" style="font-size:24px">Local weather</h2>
       </div>
@@ -132,7 +132,7 @@
           <div class="coverpic">
             <a href="https://github.com/MinarAshiqTishan/Camera_Mouse" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="images/webcam.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/webcam.JPG" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
         <h2 class="text-center introdesu" style="font-size:24px">Webcam Mouse</h2>
       </div>
@@ -152,7 +152,7 @@
           <div class="coverpic">
             <a href="https://github.com/MinarAshiqTishan/particlePacking-Prototype" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="images/pp.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/pp.JPG" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
         <h2 class="text-center introdesu" style="font-size:24px">Particle Packing Simulation</h2>
       </div>
@@ -162,7 +162,7 @@
           <div class="coverpic">
             <a href="https://github.com/MinarAshiqTishan/Portfolio_Website" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="images/this.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/this.JPG" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
         <h2 class="text-center introdesu" style="font-size:24px">This Website</h2>
       </div>
