--- a/home.html
+++ b/home.html
@@ -122,7 +122,7 @@
           <div class="coverpic">
             <a href="https://github.com/MinarAshiqTishan/Ascii_Game" target="_blank"><img src="images/cool_cat.jpg"></a>
           </div>
-          <iframe src="images/game.jpg" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
+          <iframe src="images/game.JPG" frameborder="0" scrolling="no" onload="this.style.opacity = 1"></iframe>
         </div>
         <h2 class="text-center introdesu" style="font-size:24px">ASCII Game</h2>
       </div>
