--- a/home.html
+++ b/home.html
@@ -69,8 +69,12 @@
 
 
   <div id="pfdesu" class="row">
-
-    <div class="container">
+  
+    <div class="container  text-center">
+	
+		<h1 class="introdesu text-center" style="color:white;padding:20px 0px 40px 0px">Projects</h1>
+		
+		 
       <div class="thumbnail-container">
         <div class="thumbnail">
           <div class="coverpic">
