--- a/home.html
+++ b/home.html
@@ -191,8 +191,8 @@
     <div class="container">
       
       <div class="conimage one" >
-         <a href="https://github.com/undeaddovahkin" target="_blank">
-            <img src="http://www.measurementjs.com/icon-images/github-icon.png">
+         <a href="https://github.com/MinarAshiqTishan" target="_blank">
+            <img src="icon/git.png">
           </a>
       </div>
       
