--- a/home.html
+++ b/home.html
@@ -11,7 +11,6 @@
 
       <link rel="stylesheet" href="css/style.css">
 
-  
 </head>
 
 <body>
@@ -57,10 +56,19 @@
       <h1 class="introdesu text-center" style="color:black">About Me</h1>
       <img class="mepic" src="images/me.jpg">
 
-      <div class="abme text-center">
-        <h3>Hi there!</h3> Welcome to my portfolio. I am an Electrical Engineer with a deep passion for programming and learning new things. Here you can view my resume and some of my projects.
-      </div>
-
+      <div class="abme text-center" style="padding: 20px 0px 20px 0px;">
+			<h3>Hi there!</h3> Welcome to my portfolio. I am an Electrical Engineer with a deep passion for programming and learning new things. Here you can view my resume and some of my projects.
+		</div>
+		
+<div style="text-align:center;">
+	<a href="cv/cv.pdf" target="_blank">
+			<div class="  btn btn-outline-secondary fr" >
+				Download CV
+				
+			</div>
+			</a>
+</div>
+	
     </div>
 
 <!-- coolcat photo from: images/cool_cat.jpg -->
@@ -213,9 +221,10 @@
     coded by Tishan
   </div>
 </body>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>  <script  src="./script.js"></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.4/waypoints.min.js'></script>
+
 
   
 
