--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
       <img class="mepic" src="images/me.jpg">
 
       <div class="abme text-center" style="padding: 20px 0px 20px 0px;">
-			<h3>Hi there!</h3> Welcome to my portfolio. I am an Electrical Engineer with a deep passion for programming and learning new things. Here you can view my resume and some of my projects.
+			<h3>Hi there!</h3> Welcome to my portfolio. I am an Electrical Engineer with a deep passion for programming and learning new things. Here you can view my resume and some of my personal projects.
 		</div>
 		
 <div style="text-align:center;">
@@ -105,7 +105,7 @@
           </div>
           <iframe src="images/2.JPG" frameborder="0" scrolling="no" onload="this.style.opacity = 1" ></iframe>
         </div>
-        <h2 class="text-center introdesu" style="font-size:24px">Space desu</h2>
+        <h2 class="text-center introdesu" style="font-size:24px">Plane Fight</h2>
       </div>
 
       <div class=" thumbnail-container">
